--- a/templates/settings-user.html
+++ b/templates/settings-user.html
@@ -7,6 +7,7 @@
     <title>Gestion de Usuarios - CopyNato</title>
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
     <link rel="stylesheet" href="../static/css/settings-user.css">
+    <link rel="stylesheet" href="../static/css/scrollbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -123,11 +124,11 @@
                 <form method="POST" action="{{ url_for('settings_user') }}">
                     <div class="form-group">
                         <label for="username">Usuario:</label>
-                        <input type="text" id="username" name="username" required placeholder="Ingrese el nombre de usuario">
+                        <input type="text" id="username" name="username" required placeholder="Ingrese el nombre de usuario" class="no-space">
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña:</label>
-                        <input type="password" id="password" name="password" required placeholder="Ingrese la contraseña">
+                        <input type="password" id="password" name="password" required placeholder="Ingrese la contraseña" class="no-space">
                     </div>
                     <div class="form-group">
                         <label for="role">Cargo:</label>
