--- a/templates/work.html
+++ b/templates/work.html
@@ -83,7 +83,7 @@
         
 
     <section class="home">
-        <div class="home-header">
+        <div class="home-header" style="padding-right: 5%;">
             <div class="back-button">
                 <a href="/home" class="back-btn">
                     <i class='bx bx-chevron-left'></i>
@@ -91,17 +91,19 @@
                 <div class="text">
                     <a href="/home" style="color: #695cfe; text-decoration: none;">Inicio</a> > Detalles
                     
-                    <div class="notification-container">
-                        <div class="notification-indicator" id="notificationIndicator"></div> <!-- Indicador de notificación -->
-                        <button class="notification-button" id="notificationButton">
-                            <i class="bx bxs-bell"></i> <!-- Icono de notificaciones -->
-                        </button>
-                        <div class="notification-dropdown" id="notificationDropdown"></div>
-                    </div>
+
                     
                     
 
                 </div>
+                
+            </div>
+            <div class="notification-container">
+                <div class="notification-indicator" id="notificationIndicator"></div> <!-- Indicador de notificación -->
+                <button class="notification-button" id="notificationButton">
+                    <i class="bx bxs-bell"></i> <!-- Icono de notificaciones -->
+                </button>
+                <div class="notification-dropdown" id="notificationDropdown"></div>
             </div>
         </div>
 
@@ -283,7 +285,7 @@
             <script src="../static/js/home.js"></script>
             <script src="../static/js/sidebar.js"></script>
             <script src="../static/js/work.js"></script>
-            <script src="../static/js/socket.io.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
             <script src="../static/js/send-notifications.js"></script>
         </div>
         <input type="hidden" id="id" value="{{nor}}">
