--- a/templates/settings.html
+++ b/templates/settings.html
@@ -123,13 +123,7 @@
                     </a>
                 </div>
                 <div class="setting-option">
-                    <a href="settings-security.html">
-                        <i class="fas fa-lock"></i>
-                        <span>Seguridad</span>
-                    </a>
-                </div>
-                <div class="setting-option">
-                    <a href="settings-notifications.html">
+                    <a href="{{ url_for('notifications') }}">
                         <i class="fas fa-bell"></i>
                         <span>Notificaciones</span>
                     </a>
